# AndroidDrive

./: .gitignore  README.md
sources/: AndroidDrive.pro  CMakeLists.txt  androiddevice.cpp  androiddevice.h  androiddevice.hpp  androiddrive-install-languages.iss  androiddrive-install.iss  androiddrive-setup-languages.iss  androiddrive-setup.iss  androiddrive.cpp  androiddrive.h  androiddrive.hpp  debuglogger.cpp  debuglogger.hpp  devicelistmodel.cpp  devicelistmodel.h  devicelistmodel.hpp  devicelistwindow.cpp  devicelistwindow.h  devicelistwindow.hpp  dokanoperations.cpp  dokanoperations.h  dokanoperations.hpp  helperfunctions.cpp  helperfunctions.h  helperfunctions.hpp  main.cpp  programinfo.h  resource.qrc  resource.rc  settings.cpp  settings.h  settings.hpp  settingswindow.cpp  settingswindow.h  settingswindow.hpp  temporaryfile.cpp  temporaryfile.h  temporaryfile.hpp  updates.cpp  (+3 more)
sources/installer/: androiddrive-install-languages.iss  androiddrive-install.iss  androiddrive-portable.ps1
sources/translations/: androiddrive_cn.qm  androiddrive_cn.ts  androiddrive_de.qm  androiddrive_de.ts  androiddrive_de.xlf  androiddrive_de_translation.ts  androiddrive_empty.ts  androiddrive_empty.xlf  androiddrive_empty_translation.ts  androiddrive_fr.qm  androiddrive_fr.ts  androiddrive_fr.xlf  androiddrive_hu.qm  androiddrive_hu.ts  androiddrive_hu.xlf  androiddrive_it.qm  androiddrive_it.ts  androiddrive_it.xlf  androiddrive_ja.qm  androiddrive_ja.ts  androiddrive_ja.xlf  androiddrive_ko.qm  androiddrive_ko.ts  androiddrive_ko.xlf  androiddrive_pt_BR.qm  androiddrive_pt_BR.ts  androiddrive_pt_BR.xlf  androiddrive_sv.qm  androiddrive_sv.ts  androiddrive_sv.xlf  androiddrive_zh_CN.qm  androiddrive_zh_CN.ts  androiddrive_zh_CN.xlf  contribute.md  qtbase_sv.qm
